# ItemCast

./: CMakeLists.txt  LICENSE  README.md  build.bat
resources/: app.manifest  app.rc
src/: App.cpp  App.h  Config.cpp  Config.h  KeyMapper.cpp  KeyMapper.h  KeyboardHook.cpp  KeyboardHook.h  MainWindow.cpp  MainWindow.h  TrayIcon.cpp  TrayIcon.h  main.cpp  resource.h
